[project]
name = "l16-poetry"
version = "0.1.0"
description = "HomeWorkL16_poetry"
authors = [
    {name = "Anton Maloivan",email = "kluge@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest (==8.4.2)",
    "selene (==2.0.0rc9)"
]

[dependency-groups]
dev = [
    "pylint (==4.0.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
